--- a/productos.html
+++ b/productos.html
@@ -172,6 +172,52 @@
                         <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque Electrico TSBE-80" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
+                  <!-- Producto 14 -->
+                  <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/estufa_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Estufa Eba5kvt</h3>
+                        <p class="text-gray-600 mb-4">Estufa Tiro Balanceado Longvie Eba5kvt 5000cal Termostato</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la Estufa Eba5kvt Longvie" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+              <!-- Producto 15 -->
+              <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                <img src="./src/img/productos/estufa_2.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                <div class="p-4">
+                    <h3 class="text-xl font-bold mb-2 text-gray-800"> Calefactor Longvie Eba3kv</h3>
+                    <p class="text-gray-600 mb-4">Calefactor T Balanceado Longvie Eba3kvt 3000cal Premium Viso Color Grafito</p>
+                    <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el  Calefactor T Balanceado Longvie Eba3kvt 3000cal Premium Viso Color Grafito" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                </div>
+            </div>
+            <!-- Producto 16 -->
+            <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                <img src="./src/img/productos/estufa_3.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                <div class="p-4">
+                    <h3 class="text-xl font-bold mb-2 text-gray-800"> Calefactor Longvie Eba3</h3>
+                    <p class="text-gray-600 mb-4">Calefactor Tiro Balanceado Longvie Eba3 3000kcal Premium Color Tiza</p>
+                    <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Calefactor Tiro Balanceado Longvie Eba3 3000kcal Premium Color Tiza" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                </div>
+            </div>
+             <!-- Producto 17 -->
+             <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                <img src="./src/img/productos/estufa_4.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                <div class="p-4">
+                    <h3 class="text-xl font-bold mb-2 text-gray-800"> Calefactor Longvie Eca8kvt</h3>
+                    <p class="text-gray-600 mb-4">Calefactor Convector Longvie Eca8kvt 8000kcal Visor / Term. Color Grafito</p>
+                    <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Calefactor Convector Longvie Eca8kvt 8000kcal Visor / Term. Color Grafito" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                </div>
+            </div>
+             <!-- Producto 18 -->
+             <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                <img src="./src/img/productos/estufa_4.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                <div class="p-4">
+                    <h3 class="text-xl font-bold mb-2 text-gray-800"> Calefactor Longvie Eca8kvt</h3>
+                    <p class="text-gray-600 mb-4">Calefactor Convector Longvie Eca8kvt 8000kcal Visor / Term. Color Grafito</p>
+                    <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Calefactor Convector Longvie Eca8kvt 8000kcal Visor / Term. Color Grafito" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                </div>
+            </div>
+
             </div>
         </section>
         <section class="mb-8">
@@ -227,6 +273,100 @@
                         <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la Valvula De Alivio P/ Termotanque Electrico Nex Tn-40e" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
+                <!-- Repuesto 6 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_6.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Ánodo De Magnesio Termotanque</h3>
+                        <p class="text-gray-600 mb-4">Ánodo De Magnesio Termotanque Señorial 50/95 Lt. Original</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Ánodo De Magnesio Termotanque Señorial 50/95 Lt. Original" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 7 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_6.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Ánodo De Magnesio Termotanque</h3>
+                        <p class="text-gray-600 mb-4">Ánodo De Magnesio Termotanque Señorial 120/160 Lt. Original</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Ánodo De Magnesio Termotanque Señorial 120/160 Lt. Original" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 8 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_7.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Anodo Para Termotanque Electrico</h3>
+                        <p class="text-gray-600 mb-4">Anodo Para Termotanque Electrico Longvie - Señorial 27cm</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Anodo Para Termotanque Electrico Longvie - Señorial 27cm" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 9 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_8.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Señorial Repuesto - Valvula De Alivio</h3>
+                        <p class="text-gray-600 mb-4">Señorial Repuesto - Valvula De Alivio Blanca</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Señorial Repuesto - Valvula De Alivio Blanca" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 10 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_9.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Limitador Longvie Termotanque Electrico Te60f</h3>
+                        <p class="text-gray-600 mb-4">Termostato Limitador Longvie Termotanque Electrico Te60f</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Termostato Limitador Longvie Termotanque Electrico Te60f" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 11 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_10.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Repuesto Valvula P/ Calefón</h3>
+                        <p class="text-gray-600 mb-4">Repuesto Valvula P/ Calefón Longvie</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Repuesto Valvula P/ Calefón Longvie" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 12 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_11.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Repuesto Termocupla Chispero</h3>
+                        <p class="text-gray-600 mb-4">Repuesto Termocupla Chispero Analizador Calefactor Completo</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Repuesto Termocupla Chispero Analizador Calefactor Completo" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 12 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_12.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Termotanque</h3>
+                        <p class="text-gray-600 mb-4">Termostato Termotanque Electrico Señorial Original Tsbe 40</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Termostato Termotanque Electrico Señorial Original Tsbe 40" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                 <!-- Repuesto 13 -->
+                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_13.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Horno P/ Cocina Longvie</h3>
+                        <p class="text-gray-600 mb-4">Termostato Horno P/ Cocina Longvie,valvula C/grill P/gas</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Termostato Horno P/ Cocina Longvie,valvula C/grill P/gas" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                 <!-- Repuesto 14 -->
+                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_14.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Longvie Para Termotanque Gas</h3>
+                        <p class="text-gray-600 mb-4">Termostato Longvie Para Termotanque Gas</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa - Termostato Longvie Para Termotanque Gas" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+
+
+
+
             </div>
         </section>
     </main>
